<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="370dp"
        android:layout_height="80dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/greyish_black"
            android:gravity="center_horizontal"
            android:text="@string/systemStatusString"/>

        <TextView
            android:id="@+id/systemStatus"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:textSize="19sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/offline"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="100dp"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/appliance1_name_text"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textColor="@color/greyish_black"
                android:textSize="15sp"
                android:text="@string/appliance1" />

            <TextView
                android:id="@+id/appliance2_name_text"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textColor="@color/greyish_black"
                android:textSize="15sp"
                android:text="@string/appliance2"/>

            <TextView
                android:id="@+id/appliance3_name_text"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textColor="@color/greyish_black"
                android:textSize="15sp"
                android:text="@string/appliance3"/>

            <TextView
                android:id="@+id/appliance4_name_text"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:textColor="@color/greyish_black"
                android:textSize="15sp"
                android:text="@string/appliance4"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/appliance1_button"
                android:tag="appliance1_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:onClick="applianceButtonClick"
                android:layout_marginTop="10dp"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/appliance_button_font_size"
                android:text="@string/on"/>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/appliance2_button"
                android:tag="appliance2_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:onClick="applianceButtonClick"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/appliance_button_font_size"
                android:text="@string/on" />

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/appliance3_button"
                android:tag="appliance3_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:onClick="applianceButtonClick"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/appliance_button_font_size"
                android:text="@string/on" />

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/appliance4_button"
                android:tag="appliance4_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:onClick="applianceButtonClick"
                android:background="@color/green"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/appliance_button_font_size"
                android:text="@string/on" />

        </LinearLayout>


    </LinearLayout>




</android.support.constraint.ConstraintLayout>